--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Документация Vimapay на базе Mintlify",
   "private": true,
   "scripts": {
-    "dev": "npx mintlify dev --port 3333",
+    "dev": "CHOKIDAR_USEPOLLING=true CHOKIDAR_INTERVAL=1000 npx mintlify dev --port 3333",
     "install:mintlify": "npx mintlify install"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "mint": "^4.2.218",
+    "mint": "^4.2.216",
     "rxjs": "^7.8.2"
   }
 }
+
